// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.js should render component 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1
      className="App-title"
    >
      Auto complete input backed by an endpoint using Lucene
    </h1>
  </header>
  <p
    className="App-intro"
  >
    Type any book you want.
  </p>
  <form>
    <input
      name="searchInput"
      onChange={[Function]}
      type="text"
    />
  </form>
  <div
    className="results"
  />
</div>
`;

exports[`App.js should render with results 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1
      className="App-title"
    >
      Auto complete input backed by an endpoint using Lucene
    </h1>
  </header>
  <p
    className="App-intro"
  >
    Type any book you want.
  </p>
  <form>
    <input
      name="searchInput"
      onChange={[Function]}
      type="text"
    />
  </form>
  <div
    className="results"
  >
    <div
      className="book-result"
      key="1"
    >
      <span
        className="book-title"
      >
        bookTitle
      </span>
       by
       
      <span
        className="author-name"
      >
        authorName
      </span>
    </div>
  </div>
</div>
`;
